--- a/application.yaml
+++ b/application.yaml
@@ -3,6 +3,9 @@ kind: Application
 metadata:
   name: myapp-argo-application
   namespace: argocd
+  finalizers:
+    # The default behaviour is foreground cascading deletion
+    - resources-finalizer.argocd.argoproj.io
 spec:
   project: default
 
@@ -17,7 +20,6 @@ spec:
   syncPolicy:
     syncOptions:
     - CreateNamespace=true
-
     automated:
       selfHeal: true
       prune: true
